Gradle: Fix bug
Travis CI is configured to use Gradle 4.10.3. which doesn't know that Java
16 exists, so getMajorVersion() returns 12 there.

(The Travis CI script does use a more recent Gradle where possible.
However even if it used a more recent one everywhere, fixing this still is
a good idea:
Some developers may only have an old Gradle available on their machine.)