@@ -103,13 +103,13 @@ test {
 	// failFast = true
 	
 	// FIXME: Workaround attempt for db4o breaking, and thus unit tests failing, with Java >= 16.
+	// We run this on Java 9 and above, not just 16 and above, to support old Gradle versions which
+	// won't be able to detect Java 16 as such. 9 is the minimum needed to to suport '--add-opens'.
+	//
 	// If this works then properly document it, if not remove it.
 	// Also figure out a way for how to apply it when running Freetalk in an actual Freenet node.
-	if(JavaVersion.current().getMajorVersion().toInteger() >= 16)
+	if(JavaVersion.current().getMajorVersion().toInteger() >= 9)
 		jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
-	// FIXME: Debug code for the above if() not running when it should
-	println 'getMajorVersion(): ' + JavaVersion.current().getMajorVersion()
-	println 'getMajorVersion().toInteger(): ' + JavaVersion.current().getMajorVersion().toInteger()
 	
 	maxHeapSize = "512m"
 	maxParallelForks = Runtime.runtime.availableProcessors()
